# Algotest-Studiosu

./: CMakeLists.txt
core/include/: Backtester.h  CommonTypes.h  DataHandler.h  IStrategy.h  MovingAverageStrategy.h  Portfolio.h  SimpleStrategy.h
core/src/: Backtester.cpp  DataHandler.cpp  MovingAverageStrategy.cpp  Portfolio.cpp  SimpleStrategy.cpp  main.cpp
